# practice

cmake/: .CMakeLists.txt.swo  CMakeLists.txt
cmake/include/: vecctor.hpp
cmake/src/: person.cpp  vector1.cpp
cmake/subcmake/: CMakeLists.txt  vector.cc
test/: person.hpp
